nats-micro/tests/ui/service_error_invalid_kind_newline.stderr
error: #[kind(...)] must match ^[A-Z][A-Z0-9_]*$
 --> tests/ui/service_error_invalid_kind_newline.rs:5:5
  |
5 |     #[kind("BAD\nKIND")]
  |     ^^^^^^^^^^^^^^^^^^^^
